episode-10/k8s-manifests/grafana-ingress-tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.kube101.jeffgeerling.com
    secretName: grafana-tls
  rules:
  - host: grafana.kube101.jeffgeerling.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
